--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -217,6 +217,7 @@ dl dd {
 input.noerror:focus:invalid:focus, textarea.noerror:focus:invalid:focus, select.noerror:focus:invalid:focus {
 	border-color: rgba(82,168,236,0.8);
 	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
+	color: rgb(85, 85, 85);
 }
 
 @media (min-width: 768px) {
