fixed broken links on site front

--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -47,8 +47,8 @@
 		{% endif %}
 		<p class="text-big">{% trans %}Lorry is the place to find out about and get the best addons for the game series Clonk, and to discuss all about your favourites with the community.{% endtrans %}</p>
 		<p>
-			<a href="{{base}}about/clonk" class="btn btn-success">{% trans %}New to Clonk?{% endtrans %}</a>
-			<a href="{{base}}about/lorry" class="btn">{% trans %}About Lorry{% endtrans %}</a>
+			<a href="{{base}}/clonk" class="btn btn-success">{% trans %}New to Clonk?{% endtrans %}</a>
+			<a href="{{base}}/about" class="btn">{% trans %}About Lorry{% endtrans %}</a>
 		</p>
 		<hr>
 		<h3>Spotlight</h3>
@@ -56,7 +56,7 @@
 		<p class="text-big">Clonkspot is a community platform introducing Clonk and features a blog and discussion board about various aspects of the games.</p>
 		<p>
 			<a href="http://clonkspot.org" class="btn btn-info">{% trans %}Visit clonkspot.org{% endtrans %}</a>
-			<a href="{{base}}about/community" class="btn">{% trans %}List of community sites{% endtrans %}</a>
+			<a href="{{base}}/community" class="btn">{% trans %}List of community sites{% endtrans %}</a>
 		</p>
 		<hr>
 		<h3>Pack der Woche</h3>
