fixed multiple headlines

--- a/app/templates/manage/moderation.twig
+++ b/app/templates/manage/moderation.twig
@@ -12,14 +12,14 @@
 	<div class="span4">
 		<h2>{% trans %}Addons{% endtrans %}</h2>
 		<h4>{% trans %}Awaiting approval{% endtrans %}</h4>
-		<p class="alert alert-warning">There are no addons in the approval queue.</p>
+		<p class="alert alert-warning">{% trans %}There are no addons in the approval queue.{% endtrans %}</p>
 	</div>
 	<div class="span4">
 		<h2>{% trans %}Contact form{% endtrans %}</h2>
 		<h4>{% trans %}Queue{% endtrans %}</h4>
-		<p class="alert alert-warning">There are no new messages in the queue.</p>
+		<p class="alert alert-warning">{% trans %}There are no new messages in the queue.{% endtrans %}</p>
 		<h4>{% trans %}Completed{% endtrans %}</h4>
-		<p class="alert alert-warning">There are no completed messages.</p>
+		<p class="alert alert-warning">{% trans %}There are no completed messages.{% endtrans %}</p>
 	</div>
 </div>
 {% endblock %}
