--- a/app/templates/manage/administration.twig
+++ b/app/templates/manage/administration.twig
@@ -5,8 +5,11 @@
 {% block content %}
 <h1>{{ title }}</h1>
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span4">
 		<h2>{% trans %}Overview{% endtrans %}</h2>
+	</div>
+	<div class="span4">
+		<h2>{% trans %}Front page{% endtrans %}</h2>
 	</div>
 </div>
 {% endblock %}
