--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -11,6 +11,7 @@
 			<div class="span12">
 				<h2>Codename: Modern Combat</h2>
 				<p class="alert alert-success">This release is ready to be published.</p>
+				<p><a href="{{filename}}/.." class="btn">Edit</a></p>
 			</div>
 		</div>
 		<hr>
