--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -3,18 +3,16 @@
 {% set title = 'Release'|trans %}
 
 {% block content %}
-<h1>{% trans %}Release your addon{% endtrans %}</h1>
+<h1>{% trans %}Release addon{% endtrans %}</h1>
 <div class="row-fluid">
     <div class="span12">
-		<hr>
 		<div class="row-fluid">
 			<div class="span12">
 				<h2>Codename: Modern Combat</h2>
-				<p class="alert alert-success">This release is ready to be published.</p>
+				<p class="alert alert-success">This version is ready to be published.</p>
 				<p><a href="{{filename}}/.." class="btn">Edit</a></p>
 			</div>
 		</div>
-		<hr>
 		<div class="row-fluid">
 			<div class="span6">
 				<h2>{% trans %}Release{% endtrans %}</h2>
