extended release presentation

--- a/app/templates/addon/release.twig
+++ b/app/templates/addon/release.twig
@@ -29,7 +29,8 @@
 
 		</div>
 		<div class="span9">
-			<p>Lorem ipsum dolor sit amet, maiores ornare ac fermentum, imperdiet ut vivamus a, nam lectus at nunc. Quam euismod sem, semper ut potenti pellentesque quisque. In eget sapien sed, sit duis vestibulum ultricies, placerat morbi amet vel, nullam in in lorem vel. In molestie elit dui dictum, praesent nascetur pulvinar sed, in dolor pede in.</p>
+			<p>{{addon_description}}</p>
+			<p>{{release_description}}</p>
 			<p>Categories <a href="#">Shooter</a>, <a href="#">Strategy</a>, <a href="#">Arena</a>.</p>
 		</div>
 	</div>
