--- a/app/templates/addon/release.twig
+++ b/app/templates/addon/release.twig
@@ -15,6 +15,10 @@
 	</p>
 	{% endif %}
 	<p>{% trans %}Version {{version}}, released on the {{releaseday}}{% endtrans %}</p>
+	{% if modify %}
+	<a href="{{base}}/publish" class="btn btn-info">{% trans %}Edit this release{% endtrans %}</a>
+	<a href="{{base}}/publish" class="btn">{% trans %}Edit this addon{% endtrans %}</a>
+	{% endif %}
 	<hr>
 	<div class="row-fluid">
 		<div class="span3">
