updated links from publish portal

--- a/app/templates/publish/addon.twig
+++ b/app/templates/publish/addon.twig
@@ -20,7 +20,7 @@
 			</div>
 			<div class="control-group">
 				<div class="controls">
-					<button type="submit" class="btn btn-primary">{% trans %}Save{% endtrans %}</button>
+					<button type="submit" class="btn btn-primary">{% trans %}Change{% endtrans %}</button>
 				</div>
 			</div>
 		</form>
@@ -28,7 +28,7 @@
     <div class="span4 offset3">
 		<h2>{% trans %}Versions{% endtrans %}</h2>
 		<h4>{% trans %}New version{% endtrans %}</h4>
-		<form method="post" action="{{filename}}" class="form-horizontal">
+		<form method="post" action="{{filename}}?change-details" class="form-horizontal">
 			<div class="control-group">
 				<label class="control-label" for="version">{% trans "Version" %}</label>
 				<div class="controls">
