--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -9,6 +9,8 @@
 		<link href="{{base}}/css/bootstrap.min.css" rel="stylesheet">
 		<link href="{{base}}/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<link href="{{base}}/css/lorry.min.css" rel="stylesheet">
+		<meta property="og:title" content="{{title}}">
+		<meta property="og:site_name" content="{{brand}}">
 	</head>
 	<body>{% block body %}
 		{% include 'functions/navbar.twig' %}
