--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -135,7 +135,7 @@
 					</form>
 				</div>
 				<h4 id="link">{% trans "Login services" %}</h4>
-				{% include "functions/openid.twig "%}
+				{% include 'functions/openid.twig' %}
 			</div>
 		</div>
 {% endblock %}
