--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -177,16 +177,18 @@ h2 + h4 {
 	}
 }
 
-.form-horizontal input, .form-horizontal select {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	height: 28px;
-	width: 100%;
-}
+#settings {
+	.form-horizontal input, .form-horizontal select {
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+		height: 28px;
+		width: 100%;
+	}
 
-.form-horizontal .btn {
-	width: 100%;
+	.form-horizontal .btn {
+		width: 100%;
+	}
 }
 
 .tooltip {
